tests/unit_tests/sema/binary_invalid_bitwise_operands_01.cc
// RUN: %cxx -verify -fcheck %s

struct S {};

auto x = S{} & 1; // expected-error {{invalid operands to binary expression ('::S' and 'int')}}
